--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "name": "SkeletonUpdater",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "main": "index.ts",
   "scripts": {
     "tsc": "tsc",
     "upgrade:project": "export LANG='en_US.UTF-8' && ts-node index.ts"
   },
   "bin": "index.ts",
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "inquirer": "^7.1.0",
+    "node-fetch": "^2.6.0",
+    "path": "^0.12.7",
+    "ts-node": "^8.8.2",
+    "execa": "^4.0.0"
+  },
   "devDependencies": {
     "@react-native-community/eslint-config": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "@types/node-fetch": "^2.5.5",
     "@types/inquirer": "^6.5.0",
-    "fs": "^0.0.1-security",
-    "inquirer": "^7.1.0",
-    "node-fetch": "^2.6.0",
-    "path": "^0.12.7",
-    "ts-node": "^8.8.2",
-    "execa": "^4.0.0",
     "eslint": "^6.5.1",
     "typescript": "^3.8.3",
     "prettier": "^2.0.4"
