--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SkeletonUpdater",
+  "name": "skeleton-updater",
   "version": "0.0.1",
   "private": false,
   "main": "index.ts",
@@ -7,7 +7,7 @@
     "upgrade:project": "export LANG='en_US.UTF-8' && ts-node index.ts"
   },
   "bin": {
-    "upgrade:project": "export LANG='en_US.UTF-8' && ts-node index.ts"
+    "upgrade:project": "./cli.ts"
   },
   "dependencies": {
     "fs": "^0.0.1-security",
@@ -15,14 +15,14 @@
     "node-fetch": "^2.6.0",
     "path": "^0.12.7",
     "ts-node": "^8.8.2",
-    "execa": "^4.0.0"
+    "execa": "^4.0.0",
+    "@types/node-fetch": "^2.5.5",
+    "@types/inquirer": "^6.5.0"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
-    "@types/node-fetch": "^2.5.5",
-    "@types/inquirer": "^6.5.0",
     "eslint": "^6.5.1",
     "typescript": "^3.8.3",
     "prettier": "^2.0.4"
