--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "upgrade:project": "export LANG='en_US.UTF-8' && ts-node index.ts"
   },
-  "bin": {
-    "upgrade:project": "./index.ts"
-  },
+  "bin": "./index.ts",
   "dependencies": {
     "fs": "^0.0.1-security",
     "inquirer": "^7.1.0",
