--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "skeleton-updater",
   "version": "0.0.1",
   "private": false,
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
+    "build" : "tsc",
+    "prepare": "npm run build",
     "upgrade:project": "export LANG='en_US.UTF-8' && ts-node index.ts"
   },
-  "bin": "./index.ts",
+  "bin": "./index.js",
   "dependencies": {
     "fs": "^0.0.1-security",
     "inquirer": "^7.1.0",
