--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "skeleton-updater",
   "version": "0.0.1",
   "private": false,
+  "main": "index.js",
   "scripts": {
+    "build" : "tsc index.ts",
     "upgrade:project": "export LANG='en_US.UTF-8' && ts-node index.ts"
   },
+  "bin": "./index.js",
   "dependencies": {
     "fs": "^0.0.1-security",
     "inquirer": "^7.1.0",
