--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "upgrade:project": "export LANG='en_US.UTF-8' && ts-node index.ts"
   },
   "bin": {
-    "upgrade:project": "export LANG='en_US.UTF-8' && ts-node index.ts"
+    "skeleton-updater": "./test.js"
   },
   "dependencies": {
     "fs": "^0.0.1-security",
